--- a/css/layout/sidebar.css
+++ b/css/layout/sidebar.css
@@ -22,6 +22,7 @@
     left: 0;
     z-index: 1000;
     overflow-y: auto;
+    border-right: 1px solid var(--theme-border-color);
 }
 
 /* Logo Area */
